--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "react",
   "version": "1.0.0",
+  "description": "this is the first project by Rakshitha",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "author": "",
+  "keywords": [
+    "React",
+    "node",
+    "js"
+  ],
+  "author": "Rakshitha",
   "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
